# ggtc

cai1/consulta1/: README.md  client.py  cloud.py  main.py  pyproject.toml  utils.py
cai1/consulta1/client_storage/: metadata.json  replay_attack.txt  tampered_file.txt  valid_file.txt
cai1/consulta1/docs/: diagram.bpmn
cai1/consulta2/: README.md  client.py  cloud.py  main.py  pyproject.toml  utils.py
cai1/consulta2/airline_storage/: keys.pickle  metadata.json
cai1/consulta2/cloud_storage/: encrypted_data.txt  encrypted_objects.pickle
cai1/consulta2/docs/: diagram.bpmn
cai1/consulta3/: README.md  airline.py  authority.py  benchmark.py  client.py  main.py  pyproject.toml  run_protocol.sh  test_protocol.py  utils.py
cai1/consulta3/airline_storage/: passengers.csv
cai1/consulta3/authority_storage/: common_elements.csv  encrypted_wanted.csv  encrypted_wanted_persons.csv  metadata.json  wanted_persons.csv
cai1/consulta3/docs/: diagram.bpmn  documentacion_tecnica.md  informe_optimizacion.md
cai1/consulta3/sample_data/: flight_passengers.txt  persons_of_interest.txt
cai1/consulta4/: README.md  client.py  main.py  privacy_policy_statement.txt  pyproject.toml  server.py  utils.py
cai1/consulta4/client_storage/: flight_info.csv  metadata.json
cai1/consulta4/server1_storage/: flight_data.csv  metadata.json
cai1/consulta4/server2_storage/: metadata.json
